@@ -1,5 +1,5 @@
 2011-07-04  Borut Razem  <borutr@users.sourceforge.net>
-  * libgputils/gpprocessor.c.$$, lkr/*.lkr:
+  * libgputils/gpprocessor.c, lkr/*.lkr:
     lkr/*.lkr renamed to lkr/*_g.lkr, synchronized with MPLABx v1.20
   * 12f683_g.lkr, 16c505_g.lkr, 16c771_g.lkr, 16f636_g.lkr,
     16f639_g.lkr, 16f677_g.lkr, 16f684_g.lkr, 16f687_g.lkr,
@@ -11,6 +11,8 @@
   * header/Makefile.am, patching file header/Makefile.in,
     header/p16f5x.inc: applied the back-16f5x.inc.patch.tar.7z patch
     #3539517 - "Support of new CPUs.", thanks to Molnar Karoly
+  * lkr/*.lkr: removed unneeded / obsolete lkr files
+  * libgputils/gpprocessor.c:  added 16f722
 
 2011-07-03  Borut Razem  <borutr@users.sourceforge.net>
   * header/p16c61.inc, header/p16c62.inc, header/p16c64.inc,
